# project-xross

./: ARCHITECTURE.md  Cargo.toml  README.ja.md  README.md  TODO.md  rust-toolchain.toml  settings.gradle.kts
plugin/: build.gradle.kts
plugin/src/functionalTest/kotlin/org/example/: XrossPluginFunctionalTest.kt
plugin/src/main/kotlin/org/example/: XrossPlugin.kt
plugin/src/test/kotlin/org/example/: XrossPluginTest.kt
xross-alloc/: Cargo.toml
xross-alloc/examples/: benchmark.rs
xross-alloc/src/: global.rs  heap.rs  jvm.rs  lib.rs  local.rs  main.rs  native.rs  parent.rs  slab.rs
xross-core/: Cargo.toml  build.rs
xross-core/src/: lib.rs
xross-example/: settings.gradle.kts
xross-example/app/: build.gradle.kts
xross-example/app/src/main/kotlin/org/example/: App.kt  Benchmark.kt  NativeLoader.kt  PureKotlinApp.kt  WithXrossApp.kt
xross-example/app/src/test/kotlin/org/example/: AppTest.kt
xross-example/gradle/: libs.versions.toml
xross-example/rust/: Cargo.toml
xross-example/rust/src/: all_types.rs  arrays.rs  counters.rs  enums.rs  fast.rs  graphics.rs  heavy.rs  lib.rs  lib.rs.tmp  models.rs  services.rs  standalone.rs
xross-macros/: Cargo.toml  build.rs
xross-macros/src/: attribute_macro.rs  derive_macro.rs  external_macro.rs  ffi.rs  lib.rs  macros.rs  metadata.rs  opaque_macro.rs  type_mapping.rs  type_resolver.rs  types.rs  utils.rs
xross-macros/src/codegen/: ffi.rs
xross-macros/src/codegen/ffi/: common.rs  conversion.rs  layout.rs  methods.rs  property.rs
xross-macros/src/macros/: attribute.rs  derive.rs  external.rs  opaque.rs  xross_class.rs  xross_function.rs
xross-macros/src/macros/attribute/: class.rs  function.rs  raw.rs
xross-macros/src/macros/derive/: enum_impl.rs  struct_impl.rs
xross-macros/src/macros/xross_class/: expander.rs  parser.rs
xross-macros/src/types/: mapping.rs  resolver.rs
xross-macros/src/utils/: attributes.rs  ordinal.rs
xross-macros/tests/: compile_test.rs  derive_success.rs  no_clone_derive.rs  no_repr_c.rs  test.rs
xross-metadata/: Cargo.toml
xross-metadata/src/: lib.rs
xross-metadata/src/metadata/: class.rs  field.rs  method.rs  safety.rs  types.rs
xross-metadata/src/metadata/method/: types.rs
xross-plugin/: gradle.properties  settings.gradle.kts
xross-plugin/gradle/: libs.versions.toml
xross-plugin/plugin/: build.gradle.kts
xross-plugin/plugin/src/functionalTest/kotlin/org/example/: XrossPluginPluginFunctionalTest.kt
xross-plugin/plugin/src/functionalTest/kotlin/org/xross/: XrossPluginFunctionalTest.kt
xross-plugin/plugin/src/main/kotlin/org/xross/: GenerateAction.kt  GenerateParameters.kt  GenerateXrossTask.kt  XrossClass.kt  XrossExtension.kt  XrossField.kt  XrossGenerator.kt  XrossMethod.kt  XrossPlugin.kt  XrossType.kt  XrossTypeSerializer.kt
xross-plugin/plugin/src/main/kotlin/org/xross/generator/: CodeBlockExtensions.kt  CompanionGenerator.kt  ConstructorGenerator.kt  EnumVariantGenerator.kt  FFMConstants.kt  GeneratorUtils.kt  HandleGenerator.kt  HandleResolver.kt  InvocationGenerator.kt  LayoutGenerator.kt  MethodGenerator.kt  OpaqueGenerator.kt  PropertyGenerator.kt  RuntimeGenerator.kt  StructureGenerator.kt  TypeResolver.kt  XrossGenerator.kt
xross-plugin/plugin/src/main/kotlin/org/xross/generator/util/: CodeBlockExtensions.kt  FFMConstants.kt  FieldBodyGenerator.kt  GeneratorUtils.kt
xross-plugin/plugin/src/main/kotlin/org/xross/gradle/: GenerateAction.kt  GenerateParameters.kt  GenerateXrossTask.kt  XrossExtension.kt  XrossPlugin.kt
xross-plugin/plugin/src/main/kotlin/org/xross/helper/: String.kt
xross-plugin/plugin/src/main/kotlin/org/xross/structures/: HandleMode.kt  XrossDefinition.kt  XrossField.kt  XrossMethod.kt  XrossMethodType.kt  XrossThreadSafety.kt  XrossType.kt  XrossTypeSerializer.kt  XrossVariant.kt
xross-plugin/plugin/src/test/kotlin/org/example/: XrossPluginPluginTest.kt
xross-plugin/plugin/src/test/kotlin/org/xross/: XrossPluginTest.kt
