[workspace]
resolver = "3"
members = [
    "xross-core",
    "xross-macros",
    "xross-metadata",
    "xross-alloc",
    "xross-example/rust"
]

[workspace.package]
version = "3.2.0"
edition = "2024"
authors = ["The Infinitys"]
license = "MIT"
repository = "https://github.com/the-infinitys/project-xross"
homepage = "https://github.com/the-infinitys/project-xross"
description = "A high-performance, memory-safe cross-language framework for Rust and JVM (Kotlin/Java)."

# 共通の依存関係がある場合は、ここで一括管理も可能です (Rust 1.64+)
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xross-core = { path = "xross-core" }
xross-macros = { path = "xross-macros" }
xross-metadata = { path = "xross-metadata" }
xross-alloc = { path = "xross-alloc" }
