[package]
name = "xross-core"
version = "2.0.0"
edition = "2024"

[dependencies]
xross-macros = { path = "../xross-macros", version = "2.0.0" }
xross-metadata = { path = "../xross-metadata" }
tokio = { version = "1.0", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }

[features]
default = []
tokio = ["dep:tokio", "dep:futures"]
