[package]
name = "xross-core"
version.workspace = true
edition.workspace = true

[dependencies]
xross-macros.workspace = true
xross-alloc = { workspace = true, optional = true }
tokio = { version = "1.49", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }

[features]
default = []
# xross-alloc フィーチャーを定義
xross-alloc = ["dep:xross-alloc", "xross-alloc/jvm"]
tokio = ["dep:tokio", "dep:futures"]
