[package]
name = "xross-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
xross-core = { path = "../xross-core" }
serde_json = "1.0"

[dev-dependencies]
trybuild = "1.0"
xross-metadata = { path = "../xross-metadata" }

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
xross-metadata = { path = "../xross-metadata" }

